...
                    },
                }}
            >
                <Tabs.Screen
                    name="index"
                    options={{
                        title: "Comunidade",
                        tabBarIcon: ({ color, focused }) => (
                            <BadgeContagem contagem={notificacoesNaoLidas}>
                                <IconeAba nome="grupos" color={color} focused={focused} />
                            </BadgeContagem>
                        ),
                    }}
...
